     that help user to draw som triangles.
 * Turtle
   * We implement logo turtles with the MLV_Turtle structure (MLV_turtle.h).
     The MLV turtle is a graphic component inspired from the Logo programming 
     language.
   * We add Leonardo, the MLV mascot. It is the default turtle of MLV.
 * Event:
   * Add MLV_wait_mouse_or_millisecond
 * Bug
   * Remove a bug in MLV_draw_pixel and MLV_draw_pixel_on_image. Now image is 
     not toric. 
 * Example
   * Change MLV_actualise_window by MLV_update_window

mlv-2.0.2
 * Window :
   * We Add the funtion MLV_update_window() because MLV_actualise_windows() is
     not correct english. The function MLV_Actualis_windows() is still present.
 * Documentation :
   * Some small changes in the part explaining how to compile and install MLV.
 * packaging :
   * We simplify the windows cross-compilation scripts to generate window 
     packages.
   * Code-Block IDE doesn't work. Use Dev-c++ instead of Code-BLock.

mlv-1.2.1
 * Image and text :
   * Wa move MLV_save_screen() and MLV_load_screen() inside MLV_image.h
   * Text functions can construct strings by using extra arguments.
   * Add text functions with va_list argument.
 * Window :
   * We Add the funtion MLV_clear_window() allowing to clear the window. 
   * We add MLV_create_full_screen_window_with_font().
   * We add MLV_get_desktop_width()
   * We add MLV_get_desktop_height()
   * We add MLV_get_desktop_size()
 * Example :
   * We add medium/12_desktop_size.c
   * We mov beginer/10_keys_codes.c to beginer/11_keys_code.c
 * API :
   * Complete xml functions with va_list argument.
   * We put in different headers the prototype of functions with va_list 
     argument.
 * BUG :
   * The function MLV_draw_text_box_on_image() is now implemented.  
   * The function MLV_create_full_screen_window() is now implemented.  
 * Examples :
   * Add a new example medium/10_keys_code allowing to know the sym, mod
     and unicode of keyboard events.